# gcp-pytorch-project

./: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
gcp/: mount_gcs_bucket.sh
