[tool.poetry]
name = "gcp-pytorch-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = ">=2.0.0, !=2.0.1"
kaggle = "^1.5.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
